--- a/scripts/explore_data.ipynb
+++ b/scripts/explore_data.ipynb
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "2c3e5ba0",
    "metadata": {},
    "outputs": [
@@ -724,11 +724,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "id": "7ad087aa",
    "metadata": {},
    "outputs": [],
    "source": [
+    "df=df.dropna(subset=[\"Age\"])\n",
+    "\n",
     "def create_dict(col_name):\n",
     "    data=dict()\n",
     "    try:\n",
@@ -758,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fef5a0d2",
+   "id": "34941818",
    "metadata": {},
    "outputs": [],
    "source": []
