--- a/scripts/models.ipynb
+++ b/scripts/models.ipynb
@@ -39,37 +39,37 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_22186/2394962462.py:7: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_88429/2394962462.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  X[col] = encoder.fit_transform(X[col])\n",
-      "/tmp/ipykernel_22186/2394962462.py:7: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_88429/2394962462.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  X[col] = encoder.fit_transform(X[col])\n",
-      "/tmp/ipykernel_22186/2394962462.py:7: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_88429/2394962462.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  X[col] = encoder.fit_transform(X[col])\n",
-      "/tmp/ipykernel_22186/2394962462.py:18: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_88429/2394962462.py:18: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  X_test[col] = encoder.fit_transform(X_test[col])\n",
-      "/tmp/ipykernel_22186/2394962462.py:18: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_88429/2394962462.py:18: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  X_test[col] = encoder.fit_transform(X_test[col])\n",
-      "/tmp/ipykernel_22186/2394962462.py:18: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_88429/2394962462.py:18: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "e371c888",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "e8da6c51",
    "metadata": {},
    "outputs": [
@@ -373,7 +373,7 @@
     "# X, y - train X and y\n",
     "# X_test, y_test - test X and y\n",
     "\n",
-    "MAX_DEPTH=2\n",
+    "MAX_DEPTH=4\n",
     "\n",
     "#make new model and fit it\n",
     "clf3=RandomForestClassifier(max_depth=2, random_state=0)\n",
@@ -392,7 +392,7 @@
    "id": "c6c84ad0",
    "metadata": {},
    "source": [
-    "The best depth is 2"
+    "The best depth is 2 or higher"
    ]
   },
   {
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "id": "6e1d6329",
    "metadata": {},
    "outputs": [
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "id": "19263330",
    "metadata": {},
    "outputs": [
@@ -495,7 +495,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6363636363636364\n"
+      "0.9641148325358851\n"
      ]
     }
    ],
@@ -504,7 +504,7 @@
     "# X_test, y_test - test X and y\n",
     "\n",
     "#make new model and fit it\n",
-    "clf5=svm.SVC(kernel=\"rbf\")\n",
+    "clf5=svm.SVC(kernel=\"rbf\", C=100, gamma=0.01)\n",
     "clf5.fit(X,y)\n",
     "\n",
     "#make prediction\n",
@@ -675,6 +675,8 @@
       "/opt/anaconda/lib/python3.11/site-packages/sklearn/utils/validation.py:1184: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)\n",
       "/opt/anaconda/lib/python3.11/site-packages/sklearn/utils/validation.py:1184: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n",
+      "/opt/anaconda/lib/python3.11/site-packages/sklearn/utils/validation.py:1184: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)\n"
      ]
     },
@@ -682,8 +684,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda/lib/python3.11/site-packages/sklearn/utils/validation.py:1184: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n",
       "/opt/anaconda/lib/python3.11/site-packages/sklearn/utils/validation.py:1184: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)\n",
       "/opt/anaconda/lib/python3.11/site-packages/sklearn/utils/validation.py:1184: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
@@ -798,9 +798,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 56,
    "id": "2f513e2f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -814,7 +816,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9880382775119617\n"
+      "1.0\n"
      ]
     },
     {
@@ -830,11 +832,11 @@
     "# X, y - train X and y\n",
     "# X_test, y_test - test X and y\n",
     "\n",
-    "activation='relu'\n",
-    "solver='adam'\n",
+    "activation='relu' # relu vs tanh\n",
+    "solver='adam' # adam vs lbfgs\n",
     "\n",
     "#make new model and fit it\n",
-    "clf7=MLPClassifier(random_state=1, max_iter=300, hidden_layer_sizes=(10,),activation=activation, solver=solver,)\n",
+    "clf7=MLPClassifier(random_state=1, max_iter=300, hidden_layer_sizes=(5,),activation=activation, solver=solver,)\n",
     "clf7.fit(X,y)\n",
     "\n",
     "#make prediction\n",
@@ -850,9 +852,24 @@
    "id": "1d8b49d1",
    "metadata": {},
    "source": [
-    "optimal: hidden_layer_sizes=(5,)   \n",
-    "for: hidden_layer_sizes=(10,) ... relu coś tam"
+    "optimal: hidden_layer_sizes=(5,)   "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7244cbe5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64016d03",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
